changing cosmetic and about content

--- a/index.html
+++ b/index.html
@@ -50,16 +50,15 @@
     <div class="container">
       <div class="left">
         <p>
-          I have experience in several IT fields for several years from the telecommunications, retail and tourism
-          sectors.</p>
+          A junior web developer who is always looking to learn new things. In addition, I have the principle that life should always be productive and progressive.</p>
         <p>
-          Then I also followed the bootcamp for 6 months to study Fullstack Web Developer and have approximately a year
-          of experience as a Frontend Web Developer.
+          My experience started when I was a student at SMK Negeri 39 Jakarta in 2015, in which I focused on studying basic electronics for 3 years. Then at the same time, I took an internship at an ISP company in Jakarta, I did many tasks in it, such as managing files and customer documents, on the other hand I learn many lessons such as how the internet works behind the scenes.
         </p>
         <p>
-          Besides that, I am currently also actively learning other programming language stacks such as PHP and then
-          Laravel. Also actively participating in several courses to add programming insights from various online
-          platforms.
+          After graduating from school, I have worked in several companies that are still related to the IT field about in 2018 - 2021. Firts, I was a helpdesk for mobile cellphone networks (2G/3G/4G networks) to monitor BTS performance so that it always runs according to service. Then, I also worked as a technician in a retail company in Jakarta, my job is to assemble a tool which will be used for calculating goods in/out of a warehouse. In addition, I was once assigned as a store maintenance to maintain the store network, CCTV and alarms.
+        </p>
+        <p>
+          In 2021 I attended a programming bootcamp at Fazztrack studying Fullstack Web Developer Javascript for 6 months, in which I learned a lot about the website environment from frontend to backend, and also learned the basics of algorithms and databases.
         </p>
       </div>
       <div class="right">
